--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -699,7 +699,7 @@ jobs:
           command: cd terraform/ec2/win && terraform destroy --auto-approve
 
   EC2DarwinIntegrationTest:
-    needs: [MakeMacPkg, EC2LinuxIntegrationTest, GenerateTestMatrix]
+    needs: [MakeMacPkg, GenerateTestMatrix]
     name: 'EC2DarwinIntegrationTest'
     runs-on: ubuntu-latest
     if: false
