Disable soak test

--- a/.github/workflows/soak-test.yml
+++ b/.github/workflows/soak-test.yml
@@ -38,6 +38,7 @@ jobs:
     name: "DeploySoakTest"
     needs: [BuildAndUpload]
     runs-on: ubuntu-latest
+    if: false
     permissions:
       id-token: write
       contents: read
